# phone-sensors-ml

./: .editorconfig  .env.example  .gitignore  .pylintrc  Dockerfile  README.md  demo_request.sh  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: ci.yml
phone_sensors/: api.py  birdnet.py  cli.py  core.py  db.py  schemas.py  settings.py  utils.py
tests/: test_birdnet.py  test_core.py
